--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,58 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+/bin/
+# Compilação
+/target/
+*.class
 
-### IntelliJ IDEA ###
-.idea
-*.iws
+# Configuração do Maven
+/.mvn/
+!/.mvn/wrapper/maven-wrapper.jar
+mvnw
+mvnw.cmd
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Arquivos de log
+*.log
+
+# Configurações do IDE/Editor
+/.idea/
 *.iml
 *.ipr
+*.iws
+/.project
+/.classpath
+/.settings/
+/.vscode/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# Sistema operacional
+.DS_Store
+Thumbs.db
 
-### VS Code ###
-.vscode/
+# Arquivos de ambiente e credenciais
+.env
+*.properties
+*.yml
+!application.properties
+!application.yml
+
+# Dependências baixadas
+/.gradle/
+/build/
+/.cache/
+/.tox/
+/.venv/
+
+# Testes e relatórios
+/test-output/
+/.test-results/
+/coverage/
+
+# Arquivos temporários
+*.swp
+*.swo
+*.bak
+*~
