--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,17 @@
 		    <artifactId>lombok</artifactId>
 		    <scope>provided</scope>
 		</dependency>	
+			<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    </dependency>
+		    <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+			<dependency>
+			    <groupId>org.springdoc</groupId>
+			    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			    <version>2.6.0</version>
+			</dependency>
 	</dependencies>
 
 	<build>
