--- a/pom.xml
+++ b/pom.xml
@@ -14,23 +14,15 @@
 	<packaging>pom</packaging>
 	<name>produtosApi</name>
 	<description>API de produtos</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<modules>
-		<module>application</module>
-		<module>integration-test</module>
-	</modules>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/com.filipe/produtosApi</url>
+		</repository>
+	</distributionManagement>
+
 	<properties>
 		<java.version>21</java.version>
 	</properties>
