Add distributionManagement to publish the repo into GitHub Packages

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/com.filipe/produtosApi</url>
+			<url>https://maven.pkg.github.com/GoncalvesF2/produtosApi</url>
 		</repository>
 	</distributionManagement>
 
