Add distributionManagement to publish the repo into GitHub Packages

--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -55,7 +55,7 @@
                 <executions>
                     <execution>
                         <id>integration-tests</id>
-                        <phase>verify</phase> <!-- Run after package -->
+                        <phase>verify</phase>
                         <goals>
                             <goal>integration-test</goal>
                             <goal>verify</goal>
