--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
 	<packaging>pom</packaging>
 	<name>produtosApi</name>
 	<description>API de produtos</description>
+	<modules>
+		<module>application</module>
+		<module>integration-test</module>
+
+	</modules>
+
 
 	<distributionManagement>
 		<repository>
@@ -63,6 +69,17 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
