--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,20 @@
 			    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			    <version>2.6.0</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+			<dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-validation</artifactId>
+			    <version>3.4.2</version>
+			</dependency>
+			
+			<!-- https://mvnrepository.com/artifact/org.modelmapper.extensions/modelmapper-spring -->
+			<dependency>
+			    <groupId>org.modelmapper.extensions</groupId>
+			    <artifactId>modelmapper-spring</artifactId>
+			    <version>3.2.2</version>
+			</dependency>
+
 	</dependencies>
 
 	<build>
