--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
 			    <artifactId>modelmapper-spring</artifactId>
 			    <version>3.2.2</version>
 			</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.11.4</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
