Generating app docker image and running it with docker compose

--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -52,6 +52,16 @@
     <build>
         <plugins>
 
+            <!-- Jib Ignore module -->
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.0</version> <!-- Ensure your version is up to date -->
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
             <!-- Surefire Plugin for Unit Tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
