--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,17 @@
 	<packaging>pom</packaging>
 	<name>produtosApi</name>
 	<description>API de produtos</description>
+
+	<properties>
+		<java.version>21</java.version>
+		<image.repo>local</image.repo>
+		<image.name>br-com-coti/produtos-api</image.name>
+		<image.version>1.0.0</image.version>
+	</properties>
+
 	<modules>
 		<module>application</module>
 		<module>integration-test</module>
-
 	</modules>
 
 
@@ -29,9 +36,7 @@
 		</repository>
 	</distributionManagement>
 
-	<properties>
-		<java.version>21</java.version>
-	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -90,6 +95,32 @@
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.4</version>
+
+				<configuration>
+					<from>
+						<image>eclipse-temurin:21-jre</image>
+					</from>
+					<container>
+						<mainClass>br.com.coti.ProdutosApiApplication</mainClass>
+						<ports>
+							<port>8081</port>
+						</ports>
+					</container>
+					<to>
+						<image>${image.repo}/${image.name}:${image.version}</image>
+						<tags>
+							<tag>latest</tag>
+						</tags>
+					</to>
+				</configuration>
+
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
