--- a/docker/docker-compose-app.yml
+++ b/docker/docker-compose-app.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:16-alpine
     container_name: postgres_bd_produtosapi
     restart: always
     environment:
